<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.kapsch.ipayment.SearchFinesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/totalAmountTextView"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text = "@string/value"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:maxLength="50"
                    android:id="@+id/searchValueEditText"/>

                <!--<Button-->
                    <!--android:id="@+id/scanButton"-->
                    <!--android:layout_width="100dp"-->
                    <!--android:layout_height="60dp"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:textStyle="bold"-->
                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                    <!--android:text="@string/scan"-->
                    <!--android:textAllCaps="false"-->
                    <!--android:onClick="scanBarcodeClick"/>-->

        </LinearLayout>

        <Button
            android:id="@+id/scanButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/scan"
            android:textAllCaps="false"
            android:onClick="scanBarcodeClick"/>

        <Button
            android:id="@+id/vehicleQueryButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vehicle"
            android:textAllCaps="false"
            android:onClick="vehicleQueryClick"/>

        <Button
            android:id="@+id/idNumberQueryButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/id_number"
            android:textAllCaps="false"
            android:onClick="idNumberQueryClick"/>

        <Button
            android:id="@+id/fineNumberQueryButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fine_number"
            android:textAllCaps="false"
            android:onClick="fineNumberQueryClick"/>

        <Button
            android:id="@+id/externalTokenQueryButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/qr_code"
            android:textAllCaps="false"
            android:onClick="transactionTokenQueryClick"/>

        <!--<Button-->
            <!--android:id="@+id/scanButton"-->
            <!--android:layout_width="280dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:textStyle="bold"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="@string/scan"-->
            <!--android:textAllCaps="false"-->
            <!--android:onClick="scanBarcodeClick"/>-->

    <!--<LinearLayout-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="#000000">-->

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="#FFFFFF"-->
                    <!--android:layout_margin="1dp">-->

                <!--<Spinner-->
                    <!--android:layout_width="100dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:spinnerMode="dropdown"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                    <!--android:id="@+id/searchFinesCriteriaSpinner"-->
                    <!--android:layout_column="1"/>-->

                <!--<EditText-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="3"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginRight="15dp"-->
                    <!--android:maxLength="50"-->
                    <!--android:id="@+id/searchValueEditText"/>-->

                    <!--<ImageButton-->
                        <!--android:layout_width="40dp"-->
                        <!--android:layout_height="40dp"-->
                        <!--android:scaleType="fitXY"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:layout_marginRight="15dp"-->
                        <!--android:id="@+id/searchButton"-->
                        <!--android:src="@drawable/search"-->
                        <!--android:background="@color/zxing_transparent"-->
                        <!--android:onClick="searchFinesClick"/>-->

                <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="2"-->
            <!--android:layout_margin="1dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:background="#FFFFFF">-->

            <!--<ListView-->
                <!--android:id="@+id/listView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:choiceMode="multipleChoice"-->
                <!--android:listSelector="#31bede"-->
                <!--android:clickable="true"-->
                <!--android:longClickable="true"-->
                <!--android:descendantFocusability="blocksDescendants">-->
            <!--</ListView>-->

        <!--</LinearLayout>-->

    <!--<LinearLayout-->

        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:background="@color/buttonColor">-->

        <!--<TextView-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:gravity="left"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:text = "@string/total"/>-->

        <!--<TextView-->
            <!--android:id="@+id/totalAmountTextView"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:gravity="right"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:text = "0"/>-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->

        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="right"-->
        <!--android:background="#FFFFFF">-->

        <!--<Button-->
            <!--android:id="@+id/printButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/proceed"-->
            <!--android:onClick="proceedClick"/>-->

        <!--</LinearLayout>>-->

    </LinearLayout>

</RelativeLayout>
